# Project_Program

./: exercise1.py  fibonacci.py  pyproject.toml  requirements.txt
.trunk/: trunk.yaml
src/project_program/: Script_ED50.py  amicable_numbers.py  change.py  collatz_sequence.py  complex_numbers.py  counting_sundays.py  diamonds.py  example.py  exercise1.py  factorial_digit_sum.py  fibonacci.py  first_ten_digits.py  gigasecond.py  grade_school.py  gradeschool.py  hamming.py  highly_divisible_triangle.py  killer_sudoku.py  largest_prod_in_series.py  lattice_paths.py  list_opts.py  matched_brackets.py  maximum_path_sum.py  meetup.py  names_scores.py  palindromic.py  phone_number.py  pig_latin.py  prime_factors.py  prime_factors2.py  pythagorean_triplet.py  rational_numbers.py  roman_numerals.py  rotational_cipher.py  series.py  space_age.py  (+7 more)
tests/: Script_ED50.test.py  amicable_numbers_test.py  change_test.py  collatz_sequence_test.py  complex_numbers_test.py  counting_sundays_test.py  diamonds_test.py  factorial_digit_sum_test.py  first_ten_digits_test.py  gigasecond_test.py  hamming_test.py  killer_sudoku_test.py  largest_prod_in_series_test.py  lattice_paths_test.py  matched_brackets_test.py  maximum_path_sum_test.py  palindromic_test.py  phone_number_test.py  pig_latin_test.py  prime_factors2_test.py  pythagorean_triplet.py  pythagorean_triplet_test.py  rational_numbers_test.py  roman_numerals_test  rotational_cipher_test.py  series_test.py  smallest_multiple_test.py  space_age_test.py  ten_thousand_one_prime_test.py  test_first_ten_digits.py  triangle_number_test.py
